--- a/patchwork-extensions-block/src/main/resources/patchwork-extensions-block.mixins.json
+++ b/patchwork-extensions-block/src/main/resources/patchwork-extensions-block.mixins.json
@@ -17,7 +17,11 @@
     "MixinStemBlock",
     "MixinSugarCaneBlock",
     "PlantBlockAccessor",
-    "PlantTypeAccessor"
+    "PlantTypeAccessor",
+    "MixinStairsBlock"
+  ],
+  "client": [
+    "MixinStairsBlockClient"
   ],
   "injectors": {
     "defaultRequire": 1
